--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <a href="mywork/index.html">
+            <button class="nav-link active rounded-5 " id="contact-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="false">My Work</button>
+          </a>
+        
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About Me</a>
